syntax = "proto3";

option csharp_namespace = "Drift.Networking.Grpc.Generated";

import "google/protobuf/empty.proto";

package peer;

// AgentService?
service PeerService {
  rpc Hello(HelloMessage) returns (HelloMessage);
  rpc PeerStream (stream PeerMessage) returns (stream PeerMessage);
  rpc Ping(google.protobuf.Empty) returns (PingResponse); // Delete - Hello is superset
}

message PingResponse {
  string peer_id = 1;
}

message PeerMessage {
  string message_type = 1;
  string message = 2;
}

message HelloMessage {
  string agent_id = 1;
  string drift_version = 2;
}